# pydantic-settings-yaml

./: .devrc  .gitignore  .gitlab-ci.yml  Dockerfile  LICENSE  README.rst  README.txt  docker-compose.yaml  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: patch.yaml  publish.yaml  test.yaml  version.yaml
examples/: config.py  example.env  example.yaml
pydantic_settings_yaml/: __init__.py
tests/: conftest.py  example.py  test_basic.py  test_everything.py  test_examples.py
tests/examples/: __init__.py  __main__.py  example.env  subpath-settings.yaml
yaml_settings_pydantic/: __init__.py  __main__.py
