# vi: set ft=toml:
# Read `this <https://snarky.ca/what-the-heck-is-pyproject-toml/>`.

[build-system]
requires = ["setuptools >= 40.6.0", "wheel"]
build-backend = "setuptools.build_meta"

[black]

[project]
authors = [{name = "Adrian Cederberg", email = "adrn.cederberg123@gmail.com"}, ]
name = "yaml-settings-pydantic"
version = "2.0.1"
description = "A tool to easily load (many) JSON/YAML files as pydantic settings."
readme = "README.rst"
keywords = ["env", "config", "pydantic", "settings", "pydantic-settings", "yaml", "json", "yaml-settings-pydantic"]
#liscense = "Lisense :: OSI Approved :: MIT License"

# The following were take directly from pyproject.toml in pydantic because I am lazy and the classifiers
# are applicable here.
classifiers = [
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3 :: Only',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Intended Audience :: Developers',
    'Intended Audience :: Information Technology',
    'Intended Audience :: System Administrators',
    'License :: OSI Approved :: MIT License',
    'Operating System :: Unix',
    'Operating System :: POSIX :: Linux',
    'Environment :: Console',
    'Environment :: MacOS X',
    'Framework :: Hypothesis',
    'Topic :: Software Development :: Libraries :: Python Modules',
    'Topic :: Internet',
]
dependencies = [
	"pydantic>=2",
  "pydantic-settings>=2",
	"pyyaml",
  "jsonpath-ng",
]
requires-python = ">=3.7" # because https://github.com/pydantic/pydantic/blob/main/pyproject.toml


[project.optional-dependencies]
ci = [
  "build",
  "twine",
]
dev = [
	"black",
	"flake8",
	"mypy",
	"isort"
]
test = [
	"pytest",
  "docker"
]


[tool.black]


[tool.flake8]
# Read the [enumeration of available properties](https://flake8.pycqa.org/en/latest/user/options.html#cmdoption-flake8-color).
indent_size = 4
max_line_length = 120
hang_closing = true
color = "always"
filename = "**/*.py"
ignore = [
	"E133", # Stupid closing backet requires indentation
	"E701", # Multiple statements on one line.
	"E702", # Multiple statements on one line.
	"E703", # Multiple statements on one line.
	"E704", # Multiple statements on one line.
]


[tool.isort]


[tool.mypy]


[tool.bumpver]
current_version = "2.0.1"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message  = "Bump version {old_version} -> {new_version}"
commit          = true
tag             = true
push            = false


[tool.bumpver.file_patterns]
"pyproject.toml" = ['current_version = "{version}"', 'version = "{version}"']
"yaml_settings_pydantic/__init__.py" = ["{version}"]


[tool.setuptools_scm]
