[metadata]
authors = 
	Adrian Cederberg
name = pydantic-settings-yaml
version = 0.0.0
description = A tool to load many json/yaml files as pydantic settings.
long_description = file: README.rst
keywords = pydantic, settings, pydantic-settings, yaml, json, pydantic-settings-yaml
liscense = No
	
[options]
packages = find:

[options.packages.find]
include =
	pydantic_settings_yaml*
	tests*

[flake8]
# Read the [enumeration of available properties](https://flake8.pycqa.org/en/latest/user/options.html#cmdoption-flake8-color).
indent-size = 4
hang-closing = True
color = always
filename = **/*.py
ignore =
	E133 # Stupid closing backet requires indentation
	E701 # Multiple statements on one line.
	E702 # Multiple statements on one line.
	E703 # Multiple statements on one line.
	E704 # Multiple statements on one line.
	E501 # Line too long

