[metadata]
authors = 
	Adrian Cederberg
name = pydantic-settings-yaml
version = 0.0.0
description = A tool to load many json/yaml files as pydantic settings.
long_description = file: README.rst
keywords = pydantic, settings, pydantic-settings, yaml, json, pydantic-settings-yaml
liscense = No
	
[options]
packages = find:

[options.packages.find]
include =
	pydantic_settings_yaml*

